--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -23,10 +23,10 @@
 .box .pull-right { padding:2px; } 
 
 .search-area {display:inline-block;padding-bottom:5px !important;}
-.search-area .form-group { position:relative; float:left; width: 33.33333333%; min-height: 1px; margin-bottom:0px !important; padding-right: 10px; padding-left: 10px;}
-.search-area .form-group span {padding: 6px 12px;font-weight: 500;}
-.search-area .form-group input {min-width:50%; border-radius: 4px;color: #555;border: 1px solid #ccc;padding: 3px 6px;}
-.search-area .form-group select {min-width:50%; border-radius: 4px;color: #555;border: 1px solid #ccc;padding: 3px 6px;}
+.search-area .form-group { position:relative; float:left; width: 30%; min-height: 1px; margin:5px !important; padding-right: 10px; padding-left: 10px;}
+.search-area .form-group label {min-width:100px;width:30%;padding: 2px 10px;}
+.search-area .form-group input {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
+.search-area .form-group select {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 
 @media ( min-width:768px ) {
     .head .main-bar {background-color:#827e7e}
