--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -11,13 +11,28 @@
     border-bottom: 1px solid #d4d4d4;
     box-shadow: 0 1px 4px rgba(0,0,0,.065);
 }
-
 .outer { padding: 5px !important;}
 .inner {border: 0px !important;border-radius : 4px; padding : 10px;}
+.form-group .help-block-art { position: absolute; right: 10px;}
+.form-group input, select { height:26px;max-width:95%; }
 
-#main-editor { position: absolute;border-radius : 4px;background-color: #ffffff;display:none;}
-#main-editor .panel { margin-bottom : 0;}
+#main-editor { position: absolute;border-radius : 4px;display:none;}
+#main-editor .panel { margin-bottom : 2px;}
+#main-editor .panel-toolbar { width:100%;margin-top:5px;padding:2px 10px;text-align:right;border-top:1px solid #ddd;border-bottom:1px solid #ddd;background-color:#f5f5f5;border-radius: 0px 0px 4px 4px; }
 #main-editor .panel-body {color : #333; padding:5px; }
+#main-editor .panel-body {display:inline-block;padding-bottom:5px !important;}
+.edit-area .form-group {width:95%; min-height: 1px; margin:5px !important;}
+.edit-area .form-group label {min-width:100px;width:30%;padding: 2px 10px;text-align:left;margin-bottom:1px;}
+.edit-area .form-group label.required {background-color:#f9ebeb;}
+.edit-area .form-group label.required:after {content:" *";font-weight:600; color:#CC0000; }
+.edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px;; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
+.edit-area .form-group input, select, textarea {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
+.edit-area .form-group textarea {border-radius: 0px 4px 4px 4px !important;width:100%;resize: none; }
+.edit-area .form-group input[readonly] { background:#f9f7f7; pointer-events: none;cursor:not-allowed; }
+.edit-area .form-group input.addon-btn { width:70%; }
+
+#main-msg {position:absolute;bottom:0px;min-width:500px;max-width:650px;}
+#main-msg .alert {opacity:0;}
 
 .box header h5 { padding:5px; }
 .box .pull-right { padding:2px; } 
@@ -29,22 +44,9 @@
 .search-area .form-group select {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 
 
-.edit-area {display:inline-block;padding-bottom:5px !important;}
-.edit-area .form-group {width:95%; min-height: 1px; margin:5px !important;}
-.edit-area .form-group label {min-width:100px;width:30%;padding: 2px 10px;text-align:left;}
-.edit-area .form-group input, select, textarea {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
-.edit-area .form-group textarea {border-radius: 4px !important;width:100%;resize: none; }
-.edit-area .form-group .textarea-label {  border-radius: 4px; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
 
 
 @media ( min-width:768px ) {
     .head .main-bar {background-color:#827e7e}
     .head .main-bar h3 {color:#ffffff; }
-    
-    #main-editor {
-        position: relative;
-        width   : 100%;
-        border-radius : 4px;
-        background-color: #ffffff;
-    }
 }
