add close function

--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -13,8 +13,9 @@
 }
 .outer { padding: 5px !important;}
 .inner {border: 0px !important;border-radius : 4px; padding : 10px;}
-.form-group .help-block-art { position: absolute; right: 10px;}
-.form-group input, select { height:26px;max-width:95%; }
+.form-group .help-block-art { display:inline-table; position: absolute; right: 10px;padding:1px 5px; border-radius : 4px;}
+.form-group .help-block-art .close { font-weight:500;font-size:18px;}
+.form-group input, select { height:26px;}
 
 #main-editor { position: absolute;border-radius : 4px;display:none;}
 #main-editor .panel { margin-bottom : 2px;}
@@ -22,7 +23,7 @@
 #main-editor .panel-body {color : #333; padding:5px; }
 #main-editor .panel-body {display:inline-block;padding-bottom:5px !important;}
 .edit-area .form-group {width:95%; min-height: 1px; margin:5px !important;}
-.edit-area .form-group label {min-width:100px;width:30%;padding: 2px 10px;text-align:left;margin-bottom:1px;}
+.edit-area .form-group label {min-width:100px;width:30%; padding: 4px 10px;text-align:left;margin-bottom:1px;font-size:0.83em;}
 .edit-area .form-group label.required {background-color:#f9ebeb;}
 .edit-area .form-group label.required:after {content:" *";font-weight:600; color:#CC0000; }
 .edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px;; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
@@ -39,7 +40,7 @@
 
 .search-area {display:inline-block;padding-bottom:5px !important;}
 .search-area .form-group { position:relative; float:left; width: 30%; min-height: 1px; margin:5px !important; padding-right: 10px; padding-left: 10px;}
-.search-area .form-group label {min-width:90px;width:30%;padding: 2px 10px;text-align:left;}
+.search-area .form-group label {min-width:90px;width:30%;padding: 2px 10px;text-align:left;font-size:0.83em;}
 .search-area .form-group input {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 .search-area .form-group select {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 
