--- a/src/main/webapp/css/art-common.css
+++ b/src/main/webapp/css/art-common.css
@@ -1,4 +1,6 @@
 body {}
+
+input {border-radius : 4px;border: 1px solid #ccc;}
 	
 .pointers {cursor:pointer;}
 
@@ -8,3 +10,14 @@ body {}
 
 .m-l-5 {margin-left:5px;}
 .m-l-10 {margin-left:10px;}
+
+.w-10 {width:10% !important;}
+.w-20 {width:20% !important;}
+.w-30 {width:30% !important;}
+.w-40 {width:40% !important;}
+.w-50 {width:50% !important;}
+.w-60 {width:60% !important;}
+.w-70 {width:70% !important;}
+.w-80 {width:80% !important;}
+.w-90 {width:90% !important;}
+.w-100 {width:100% !important;}
