--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -16,7 +16,7 @@
 .form-group {margin-bottom : 5px;}
 .form-group .help-block-art { display:inline-table; position: absolute; right: 10px;padding:1px 5px; border-radius : 4px;}
 .form-group .help-block-art .close { font-weight:500;font-size:18px;}
-.form-group input, select { height:26px;}
+.form-group input[type=text], select, { height:26px;}
 
 #main-editor { position: absolute;border-radius : 4px;display:none;}
 #main-editor .panel { margin-bottom : 2px;}
@@ -28,19 +28,20 @@
 .edit-area .form-group label.required {background-color:#f9ebeb;}
 .edit-area .form-group label.required:after {content:" *";font-weight:600; color:#CC0000; }
 .edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
-.edit-area .form-group input, select, textarea {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
+.edit-area .form-group input, select, textarea  {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;font-size:0.83em;}
 .edit-area .form-group textarea {border-radius: 0px 4px 4px 4px !important;width:100%;resize: none; }
 .edit-area .form-group input[readonly] { background:#f9f7f7; pointer-events: none;cursor:not-allowed; }
 .edit-area .form-group input.addon-btn { width:70%; }
 .edit-area .form-group .middle-btn { border-radius:0px; }
 .edit-area .form-group .front-btn { border-radius: 4px 0px 0px 4px; }
 .edit-area .form-group .input-group button { margin-bottom:2px; }
+.edit-area .form-group .input-group .radio-area  {min-height:26px;border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;}
+.edit-area .form-group .input-group .radio-area label { padding: 2px 10px;; }
+.edit-area .form-group .input-group .radio-area .radio-inline { padding: 2px 25px; }
+.edit-area .form-group .input-group .radio-area .radio { display: block; }
 
 #main-msg {position:absolute;bottom:0px;min-width:500px;max-width:650px;}
 #main-msg .alert {opacity:0;}
-
-.box header h5 { padding:5px; }
-.box .pull-right { padding:2px; } 
 
 .search-area {display:inline-block;padding-bottom:5px !important;}
 .search-area .form-group { position:relative; float:left; width: 30%; min-height: 1px; margin:5px !important; padding-right: 10px; padding-left: 10px;}
