--- a/src/main/webapp/css/art-common.css
+++ b/src/main/webapp/css/art-common.css
@@ -11,6 +11,9 @@ input {border-radius : 4px;border: 1px solid #ccc;}
 .m-l-5 {margin-left:5px;}
 .m-l-10 {margin-left:10px;}
 
+.p-5 {padding:5px;}
+.p-10 {padding:10px;}
+
 .w-10 {width:10% !important;}
 .w-20 {width:20% !important;}
 .w-30 {width:30% !important;}
