--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -13,10 +13,14 @@
 }
 .outer { padding: 5px !important;}
 .inner {border: 0px !important;border-radius : 4px; padding : 10px;}
+.form-control { height:26px;font-size:0.83em;padding: 2px 5px;}
+.input-group-addon {padding: 2px 10px;};
+
 .form-group {margin-bottom : 5px;}
-.form-group .help-block-art { display:inline-table; position: absolute; right: 10px;padding:1px 5px; border-radius : 4px;}
+.form-group input[type=text], select { height:26px;}
+.form-group .help-block-art { display:inline-table; position: absolute; right: 10px;padding:3px 5px; border-radius : 4px;z-index:1024;}
+.form-group .help-block-art .label { font-size:85%;}
 .form-group .help-block-art .close { font-weight:500;font-size:18px;}
-.form-group input[type=text], select, { height:26px;}
 
 #main-editor { position: absolute;border-radius : 4px;display:none;}
 #main-editor .panel { margin-bottom : 2px;}
@@ -24,21 +28,21 @@
 #main-editor .panel-body {color : #333; padding:5px; }
 #main-editor .panel-body {padding-bottom:5px !important;}
 .edit-area .form-group {width:100%; min-height: 1px; margin-bottom :5px !important;}
-.edit-area .form-group label {min-width:100px;width:30%; padding: 4px 10px;text-align:left;margin-bottom:1px;font-size:0.83em;}
-.edit-area .form-group label.required {background-color:#f9ebeb;}
-.edit-area .form-group label.required:after {content:" *";font-weight:600; color:#CC0000; }
-.edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
-.edit-area .form-group input, select, textarea  {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;font-size:0.83em;}
+.edit-area .form-group .title {min-width:100px;width:30%; padding: 4px 10px;text-align:left;margin-bottom:1px;font-size:0.83em;}
+.edit-area .form-group .title.required {background-color:#f9ebeb;}
+.edit-area .form-group .title.required:after {content:" *";font-weight:600; color:#CC0000; }
+.edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px !important; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
+.edit-area .form-group input, select, textarea  {border-radius: 0px 4px 4px 0px  !important;}
 .edit-area .form-group textarea {border-radius: 0px 4px 4px 4px !important;width:100%;resize: none; }
 .edit-area .form-group input[readonly] { background:#f9f7f7; pointer-events: none;cursor:not-allowed; }
 .edit-area .form-group input.addon-btn { width:70%; }
 .edit-area .form-group .middle-btn { border-radius:0px; }
 .edit-area .form-group .front-btn { border-radius: 4px 0px 0px 4px; }
 .edit-area .form-group .input-group button { margin-bottom:2px; }
-.edit-area .form-group .input-group .radio-area  {min-height:26px;border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;}
-.edit-area .form-group .input-group .radio-area label { padding: 2px 10px;; }
-.edit-area .form-group .input-group .radio-area .radio-inline { padding: 2px 25px; }
-.edit-area .form-group .input-group .radio-area .radio { display: block; }
+
+.edit-area .form-group .radio-area, .checkbox-area  {min-height:26px;border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding-left:5px;}
+
+.edit-area .form-group .input-group-btn .btn-xs {padding:3px 10px;}
 
 #main-msg {position:absolute;bottom:0px;min-width:500px;max-width:650px;}
 #main-msg .alert {opacity:0;}
@@ -48,6 +52,9 @@
 .search-area .form-group label {min-width:90px;width:30%;padding: 2px 10px;text-align:left;font-size:0.83em;}
 .search-area .form-group input {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 .search-area .form-group select {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
+
+
+.area-search-result {text-align:right;border-top: 1px solid #ccc;}
 
 .area-color {background-color:#fbfcff; border:1px dashed #ddd; padding:10px;border-radius: 0.6em !important;}
 
