--- a/src/main/webapp/css/art-common.css
+++ b/src/main/webapp/css/art-common.css
@@ -18,6 +18,7 @@ input {border-radius : 4px;border: 1px solid #ccc;}
 .w-20 {width:20% !important;}
 .w-30 {width:30% !important;}
 .w-40 {width:40% !important;}
+.w-45 {width:45% !important;}
 .w-50 {width:50% !important;}
 .w-60 {width:60% !important;}
 .w-70 {width:70% !important;}
