--- a/src/main/webapp/css/art-common.css
+++ b/src/main/webapp/css/art-common.css
@@ -8,6 +8,11 @@ input {border-radius : 4px;border: 1px solid #ccc;}
 
 .highlight { font-weight:600; color:#CC0000; }
 
+.clear-float {
+    float: none;
+    width: auto;
+}
+
 .m-l-5 {margin-left:5px;}
 .m-l-10 {margin-left:10px;}
 
