--- a/src/main/webapp/css/art-common.css
+++ b/src/main/webapp/css/art-common.css
@@ -8,6 +8,8 @@ input {border-radius : 4px;border: 1px solid #ccc;}
 
 .highlight { font-weight:600; color:#CC0000; }
 
+.disabled { pointer-events:none; opacity:0.4;}
+
 .clear-float {
     float: none;
     width: auto;
