--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -1,6 +1,6 @@
 <!-- body { min-width:760px;} -->
 
-#menu > li.active ul > li.selected > a {background-color: #415875;font-weight:600;}
+#menu > li.active ul > li.selected > a {background-color: #415875;font-weight:400;}
 
 .pq-grid .pq-pager {text-align:center;}
 
@@ -42,9 +42,9 @@ text-decoration: none; top: 0;border: 1px solid #666;outline: 0 none;}
 #main-editor .panel-body {padding-bottom:5px !important;}
 .edit-area .form-group {width:100%; min-height: 1px; margin-bottom :5px !important;}
 .edit-area .form-group.bottom {width:49%; min-height: 1px; margin-bottom :5px !important; margin-right:5px !important;float:left;}
-.edit-area .form-group .title {min-width:100px;width:30%; padding: 4px 10px;text-align:left;margin-bottom:1px;font-size:0.83em;}
+.edit-area .form-group .title {min-width:100px;width:30%; padding: 4px 10px;text-align:left;margin-bottom:1px;font-size:0.83em;font-weight:400;}
 .edit-area .form-group .title.required {background-color:#f9ebeb;}
-.edit-area .form-group .title.required:after {content:" *";font-weight:600; color:#CC0000; }
+.edit-area .form-group .title.required:after {content:" *";font-weight:400; color:#CC0000; }
 .edit-area .form-group .textarea-label {  border-radius: 4px 4px 0px 0px !important; border: 1px solid #ccc;background-color:#eee;font-weight:400; }
 .edit-area .form-group textarea {border-radius: 0px 4px 4px 4px !important;width:100%;resize: none; }
 .edit-area .form-group input[readonly] { background:#f9f7f7; pointer-events: none;cursor:not-allowed; }
@@ -68,7 +68,7 @@ text-decoration: none; top: 0;border: 1px solid #666;outline: 0 none;}
 
 .search-area {display:inline-block;padding-bottom:5px !important;}
 .search-area .form-group { position:relative; float:left; min-height: 1px; margin:5px !important; padding-right: 10px; padding-left: 10px;}
-.search-area .form-group .title {min-width:90px;width:30%;padding: 2px 10px;text-align:left;font-size:0.83em;}
+.search-area .form-group .title {min-width:90px;width:30%;padding: 2px 10px;text-align:left;font-size:0.83em;font-weight:400;}
 .search-area .form-group input {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 .search-area .form-group select {border-radius: 0px 4px 4px 0px;color: #555;border: 1px solid #ccc;padding: 2px 3px;}
 
@@ -93,6 +93,8 @@ text-decoration: none; top: 0;border: 1px solid #666;outline: 0 none;}
 .tree li button, .tree li button:active, .tree li button:focus {text-decoration: none;color:#369;background:transparent;margin:0px 0px 0px 0px;padding:1px 3px;outline: 0;font-size:0.8em;}
 
 .bootstrapMenu ul li a{padding:3px 5px;}
+
+.pq-grid .pq-grid-title-row .pq-td-div{font-weight:400;}
 
 @media ( min-width:768px ) {
     .head .main-bar {background-color:#827e7e}
