--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -94,13 +94,18 @@ text-decoration: none; top: 0;border: 1px solid #666;outline: 0 none;}
 .tree li span.selected {background-color:#e8e6e6;}
 .tree li span.selected label {font-weight:700 !important;font-size:0.9em !important;}
 .indicator {margin-right:5px;}
-.tree li span.group{border: 1px solid #999;border-radius: 4px;padding:0px 10px 0px 2px; background-color: #fbfbfb;}
+.tree li span.group{border: 1px solid #999;border-radius:3px;padding:1px 10px 0px 2px; background-color:#f3f3f3;}
 .tree li label{font-size:0.83em !important;color : #333 !important;font-weight: 400 !important;margin-bottom:0px !important;}
 .tree li a {text-decoration: none;color:#369;}
 .tree li i, label {cursor:pointer}
 .tree li button, .tree li button:active, .tree li button:focus {text-decoration: none;color:#369;background:transparent;margin:0px 0px 0px 0px;padding:1px 3px;outline: 0;font-size:0.8em;}
 
 .bootstrapMenu ul li a{padding:3px 5px;}
+
+.sortable { list-style-type: none; margin: 0; padding: 0px 2px; width: 80%; }
+.sortable li { margin: 1px; padding: 0.3em; padding-left: 1.5em; font-size: 0.83em; }
+.sortable li span { position: absolute; margin-left: -1.3em;margin-top:0px;}
+.sortable li.ui-state-default {background-color:#fff !important;}
 
 .pq-grid .pq-grid-title-row .pq-td-div{font-weight:400;}
 
