--- a/src/main/webapp/css/art-contents.css
+++ b/src/main/webapp/css/art-contents.css
@@ -28,6 +28,8 @@
 color: #E1E1E8;left: -39px;padding: 4px 4px 5px;position: absolute;
 text-decoration: none; top: 0;border: 1px solid #666;outline: 0 none;}
 
+.box {margin-top:15px !important;margin-bottom:5px !important;}
+
 #search-bar-user {position: fixed;right:0px;bottom: 0px;width:250px;background-color:#303030 !important;z-index:1001;}
 #search-bar-user .search-bar {padding:9px !important;float:none;}
 #search-bar-user .search-bar.show-body {padding:3px 3px 0px 3px !important;}
